meta image made visible

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Jovian Careers">
     <meta property="og:description" content="Learn about job openings at Jovian and submit your application now">
-    <meta property="og:image" content="/workspaces/jovian-careers-page/src/meta image.png">
+    <meta property="og:image" content="/meta image.png">
     <meta name="twitter:title" content="Jovian Careers">
     <meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
-    <meta name="twitter:image" content="/workspaces/jovian-careers-page/src/meta image.png">
+    <meta name="twitter:image" content="/meta image.png">
 
     <title>Jovian Careers</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
