--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about job openings at Jovian and submit your application now">
-    <meta name="keywords" content="data science, software development, jobs">
-    <meta name="author" content="Jovian">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Jovian Careers">
-    <meta property="og:description" content="Learn about job openings at Jovian and submit your application now">
-    <meta property="og:image" href="/meta_image.png">
-    <meta name="twitter:title" content="Jovian Careers">
-    <meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
-    <meta name="twitter:image" href="/meta_image.png">
-
     <title>Jovian Careers</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
+<meta name="description" content="Learn about job openings at Jovian and submit your application now">
+
+<!-- Google / Search Engine Tags -->
+<meta itemprop="name" content="Jovian Careers">
+<meta itemprop="description" content="Learn about job openings at Jovian and submit your application now">
+<meta itemprop="image" content="src/meta_image.png">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://jovian-careers-page.vercel.app">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Jovian Careers">
+<meta property="og:description" content="Learn about job openings at Jovian and submit your application now">
+<meta property="og:image" content="src/meta_image.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Jovian Careers">
+<meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
+<meta name="twitter:image" content="src/meta_image.png">
+
 
     <title>
         My First Web Page
